src/main/java/com/example/demo/controllers/errors/CustomErrorController.java
package com.example.demo.controllers.errors;

import org.springframework.boot.web.servlet.error.ErrorController;
import org.springframework.stereotype.Controller;

@Controller
public class CustomErrorController implements ErrorController {
    
}
